Fixed footer cutting off bottom text box in mobile mode

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,10 @@ p {
     margin-top: 0 !important;
 }
 
+.card.mb-3 {
+    margin-bottom: 3.5rem !important;
+}
+
 .about-me-text{
     font-size: 110%;
 }
@@ -99,7 +103,7 @@ p {
     .navbar-brand {
         text-align: center;
     }
-    .about-me-text {
+    .card, .about-me-text {
         font-size: 100%;
     }
 }
